# Octave

./: .gitignore  Cargo.toml  README.md  TODO.md
benches/: upsample_bench.rs
res/: test.csv
src/: audio.rs  circular_buffer.rs  fft.rs  file_analyzer.rs  file_io.rs  fir_filter.rs  fir_filter_constants.rs  img_generator.rs  lib.rs  lookup_tables.rs  main.rs  parametric_eq.rs  players.rs  rta.rs  tests.rs  util.rs
ui/: app-window.slint  button.slint  colors.slint  combobox.slint  labelled-input.slint  loading-spinner.slint  log-graph.slint  main-ui.slint  menu-button.slint  num-input.slint  parametric-eq.slint  player-progress-bar.slint  slider.slint  toggle-box.slint
