[package]
name = "octave"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
slint = "1.10.0"
cpal = "0.15.3"

[dev-dependencies]
criterion = "0.5.1"

[build-dependencies]
slint-build = "1.10.0"

[[bench]]
name = "upsample_bench"
harness = false

[package.metadata.bundle]
name = "Octave"
icon = ["./icons/Octave Piano Icon.png"]
